crates/ink/tests/ui/contract/fail/storage-unknown-marker.stderr
error: encountered unknown ink! attribute argument: unknown_or_unsupported
 --> tests/ui/contract/fail/storage-unknown-marker.rs:4:11
  |
4 |     #[ink(unknown_or_unsupported)]
  |           ^^^^^^^^^^^^^^^^^^^^^^
